# hypigu

./: .gitignore  LICENSE  README.md  __init__.py  _doctest_environment.py  setup.cfg  setup.py  steup.cfg  tox.ini
docs/: 404.html  CNAME  index.html  index.md  sitemap.xml
docs/constructors/: index.html
docs/generating-functions/: index.html
docs/graded_posets/: index.html
docs/lattices/: index.html
docs/rational-functions/: index.html
docs/rational_functions/: index.html
docs/search/: search_index.json
hypigu/: __init__.py  braid.py  constructors.py  database.py  gen_functions.py  globals.py  graded_poset.py  lattice_flats.py
hypigu/src/: Braid.py  Constructors.py  Database.py  GenFunctions.py  Globals.py  LatticeFlats.py  init_data.py
md_files/: mkdocs.yml
md_files/custom_theme/: base.html  base_OLD.html
md_files/docs/: constructors.md  generating-functions.md  graded_posets.md  index.md  lattices.md  rational-functions.md  rational_functions.md
site/constructors/: index.html
site/gen-series/: index.html
site/search/: search_index.json
src/: Braid.py  Constructors.py  Coxeter.py  Database.py  GenFunctions.py  Globals.py  LatticeFlats.py  PosetOps.py  SmallCentral.py  sandbox.py
tests/: test_braid.py  test_constructors.py
