[metadata]
name = hypigu
version = 1.2
author = Joshua Maglione
author_email = jmaglione@math.uni-bielefeld.de
description = A SageMath package that provides functions to compute the Igusa local zeta function associated with hyperplane arrangements.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://joshmaglione.github.io/hypigu/
project_urls =
    Bug Tracker = https://github.com/joshmaglione/hypigu/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = 
    SageMath
    hyperplane arrangements
    Igusa zeta functions
    topological zeta functions
    Flag Hilbert--Poincare series

[options]
packages = find: